Добавлена страница с информацией по конкретной рассылке

--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -233,7 +233,7 @@
         <h5>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">
+                    <a href="{% url 'mailings:mailings_list' %}" class="nav-link active" aria-current="page">
                         <svg class="bi pe-none me-2" width="16" height="16">
                             <use xlink:href="#mailbox"/>
                         </svg>
