--- a/mailings/templates/mailings/mailings_list.html
+++ b/mailings/templates/mailings/mailings_list.html
@@ -12,7 +12,7 @@
     </a>
     {% for object in object_list %}
     <div class="list-group list-group-flush border-bottom scrollarea">
-        <a href="#" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+        <a href="{% url 'mailings:mailings_view' object.pk %}" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
             <div class="d-flex w-100 align-items-center justify-content-between">
                 <h3><strong class="mb-1">Тема: {{ object.message.message_title }}</strong></h3>
 
