--- a/mailings/templates/mailings/mailings_detail.html
+++ b/mailings/templates/mailings/mailings_detail.html
@@ -25,8 +25,9 @@
         </div>
     </div>
     <div class="p-5 text-center rounded-3">
-        <h1 class="text-body-emphasis">{{ object.message.message_title }}</h1>
-        <p class="col-lg-8 mx-auto fs-5 text-muted">
+        <h2 class="text-body-emphasis text-left">{{ object.message.message_title }}</h2>
+
+        <p class="col-lg-12 mx-auto fs-4 text-muted">
             {{ object.message.message_text }}
         </p>
     </div>
