--- a/mailings/templates/mailings/mailings_detail.html
+++ b/mailings/templates/mailings/mailings_detail.html
@@ -4,15 +4,18 @@
 
 <div class="container my-5">
     <div class="d-inline-flex gap-2 mb-5">
-        <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
-            Редактировать рассылку
-            <svg class="bi ms-1" width="24" height="24">
-                <use xlink:href="#arrow-right-short"/>
-            </svg>
-        </button>
-        <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
-            Удалить рассылку
-        </button>
+        <a class="btn btn-primary btn-lg px-4 rounded-pill" href="{% url 'mailings:mailings_list' %}" role="button">Назад</a>
+        <a class="btn btn-primary btn-lg px-4 rounded-pill" href="{% url 'mailings:mailings_update' object.pk %}" role="button">Редактировать</a>
+        <a class="btn btn-primary btn-lg px-4 rounded-pill" href="#" role="button">
+            {% if object.is_active %}
+                Деактивировать
+            {% else %}
+                Активировать
+            {% endif %}
+        </a>
+        <a class="btn btn-primary btn-lg px-4 rounded-pill" href="{% url 'mailings:mailings_delete' object.pk %}" role="button">Удалить</a>
+        <a class="btn btn-primary btn-lg px-4 rounded-pill" href="{% url 'mailings:mailings_create' %}" role="button">Создать новую рассылку</a>
+
     </div>
 
     <div class="row">
