--- a/mailings/templates/mailings/mailings_list.html
+++ b/mailings/templates/mailings/mailings_list.html
@@ -1,16 +1,18 @@
 {% extends "mailings/base.html" %}
 
 {% block content %}
-<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 580px;">
+
+<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 45%;">
 
     <a href="/"
        class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
         <svg class="bi pe-none me-2" width="30" height="24">
             <use xlink:href="#mailbox"/>
         </svg>
-        <span class="fs-2 fw-semibold">Список рассылок</span>
+        <span class="fs-2 fw-semibold">Список активных рассылок</span>
     </a>
     {% for object in object_list %}
+    {% if object.is_active %}
     <div class="list-group list-group-flush border-bottom scrollarea">
         <a href="{% url 'mailings:mailings_view' object.pk %}" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
             <div class="d-flex w-100 align-items-center justify-content-between">
@@ -25,10 +27,43 @@
             <div class="col-10 mb-1 small">{{ object.message.message_text | truncatechars:60 }}.</div>
         </a>
     </div>
+    {% endif %}
     {% endfor %}
+
 </div>
 <div class="b-example-divider b-example-vr"></div>
 
+
+<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 45%;">
+
+    <a href="/"
+       class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+        <svg class="bi pe-none me-2" width="30" height="24">
+            <use xlink:href="#mailbox"/>
+        </svg>
+        <span class="fs-2 fw-semibold">Список не активных рассылок</span>
+    </a>
+    {% for object in object_list %}
+    {% if not object.is_active %}
+    <div class="list-group list-group-flush border-bottom scrollarea">
+        <a href="{% url 'mailings:mailings_view' object.pk %}" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <h3><strong class="mb-1">Тема: {{ object.message.message_title }}</strong></h3>
+
+                <small>
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#chat-right-text"/>
+                    </svg>
+                </small>
+            </div>
+            <div class="col-10 mb-1 small">{{ object.message.message_text | truncatechars:60 }}.</div>
+        </a>
+    </div>
+    {% endif %}
+    {% endfor %}
+
+</div>
+<div class="b-example-divider b-example-vr"></div>
 
 
 {% endblock %}
