Добавлен CRUD-механизм Сообщений(message)

--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -231,17 +231,18 @@
         </div>
         <hr>
         <h5>
+
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="{% url 'mailings:mailings_list' %}" class="nav-link active" aria-current="page">
+                    <a href="{% url 'mailings:mailings_list' %}" class="nav-link text-white" aria-current="page">
                         <svg class="bi pe-none me-2" width="16" height="16">
                             <use xlink:href="#mailbox"/>
                         </svg>
                         Список рассылок
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="nav-link text-white">
+                <li class="nav-item">
+                    <a href="{% url 'mailings:message_list' %}" class="nav-link text-white">
                         <svg class="bi pe-none me-2" width="16" height="16">
                             <use xlink:href="#chat-right-text"/>
                         </svg>
