--- a/mailings/templates/mailings/mailings_list.html
+++ b/mailings/templates/mailings/mailings_list.html
@@ -11,6 +11,9 @@
         </svg>
         <span class="fs-2 fw-semibold">Список активных рассылок</span>
     </a>
+    <div class="text-bg-light p-3">
+        <a class="btn btn-primary" href="{% url 'mailings:mailings_create' %}" role="button">Создать новую рассылку</a>
+    </div>
     {% for object in object_list %}
     {% if object.is_active %}
     <div class="list-group list-group-flush border-bottom scrollarea">
@@ -43,6 +46,9 @@
         </svg>
         <span class="fs-2 fw-semibold">Список не активных рассылок</span>
     </a>
+    <div class="text-bg-light p-3">
+        <a class="btn btn-primary" href="{% url 'mailings:mailings_list' %}" role="button">Кнопка</a>
+    </div>
     {% for object in object_list %}
     {% if not object.is_active %}
     <div class="list-group list-group-flush border-bottom scrollarea">
@@ -56,7 +62,7 @@
                     </svg>
                 </small>
             </div>
-            <div class="col-10 mb-1 small">{{ object.message.message_text | truncatechars:60 }}.</div>
+            <div class="col-10 mb-1 small">{{ object.message.message_text | truncatechars:60 }}</div>
         </a>
     </div>
     {% endif %}
