--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -217,16 +217,31 @@
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                <h2><strong>User</strong></h2>
+                <h2><strong>
+                    {% if user.is_authenticated %}
+                        {{ user }}
+                    {% else %}
+                        Гость
+                    {% endif %}
+                </strong></h2>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                {% if user.is_authenticated %}
+                    <form action="{% url 'users:logout' %}" method="post">
+                        {% csrf_token %}
+                        <li><a class="dropdown-item text-white" href="{% url 'users:profile' %}">Профиль</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+
+                        <button style='color:#ffffff' type="submit" class="btn btn-link">Выход</button>
+                </form>
+                    {% else %}
+                    <li><a class="dropdown-item text-white" href="{% url 'users:login' %}">Вход</a></li>
+                    <li><a class="dropdown-item text-white" href="{% url 'users:register' %}">Регистрация</a></li>
+                    {% endif %}
+
+
             </ul>
         </div>
         <hr>
