Добавлен список пользователей и сделаны настройки доступа

--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -272,6 +272,17 @@
                         Список клиентов
                     </a>
                 </li>
+
+                {% if user.is_authenticated and perms.users.change_active_user %}
+                <li>
+                    <a href="{% url 'users:user_list' %}" class="nav-link text-white">
+                        <svg class="bi pe-none me-2" width="16" height="16">
+                            <use xlink:href="#person-vcard-fill"/>
+                        </svg>
+                        Список Пользователей
+                    </a>
+                </li>
+                {% endif %}
                 <li>
                     <a href="#" class="nav-link text-white">
                         <svg class="bi pe-none me-2" width="16" height="16">
