--- a/mailings/templates/mailings/message_list.html
+++ b/mailings/templates/mailings/message_list.html
@@ -17,7 +17,8 @@
     {% for object in object_list %}
     <div class="list-group list-group-flush border-bottom scrollarea">
         <a href="{% url 'mailings:message_view' object.pk %}"
-           class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+           class="list-group-item list-group-item-action {% if object.owner == user %} active {% endif %} py-3 lh-sm"
+           aria-current="true">
             <div class="d-flex w-100 align-items-center justify-content-between">
                 <h3><strong class="mb-1">Тема: {{ object.message_title }}</strong></h3>
 
