Добавлено приложение Блог

--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -284,7 +284,7 @@
                 </li>
                 {% endif %}
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="{% url 'blog:blog_list' %}" class="nav-link text-white">
                         <svg class="bi pe-none me-2" width="16" height="16">
                             <use xlink:href="#grid"/>
                         </svg>
