--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -1,5 +1,5 @@
 {% extends "mailings/base.html" %}
-
+{% load my_tags %}
 {% load static %}
 
 {% block content %}
@@ -11,7 +11,7 @@
                 <div class="card shadow-sm mb-3">
                     <div class="card-header">
                         {% if object.preview %}
-                        <img class="card-img-top" src="{{ object.preview }}"
+                        <img class="card-img-top" src="{{ object.preview | media_filter }}"
                              style="max-width: 600px; max-height: 400px">
                         {% else %}
                         <img src="{% static 'images/image_by_default.jpeg' %}"
