--- a/mailings/templates/mailings/base.html
+++ b/mailings/templates/mailings/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load my_tags %}
 
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
@@ -175,6 +176,12 @@
         <path fill-rule="evenodd" clip-rule="evenodd"
               d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"></path>
     </symbol>
+    <symbol id="attempt" viewBox="0 0 16 16">
+        <path d="M3 4.5a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5M11.5 4a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1z"/>
+        <path d="M2.354.646a.5.5 0 0 0-.801.13l-.5 1A.5.5 0 0 0 1 2v13H.5a.5.5 0 0 0 0 1h15a.5.5 0 0 0 0-1H15V2a.5.5 0 0 0-.053-.224l-.5-1a.5.5 0 0 0-.8-.13L13 1.293l-.646-.647a.5.5 0 0 0-.708 0L11 1.293l-.646-.647a.5.5 0 0 0-.708 0L9 1.293 8.354.646a.5.5 0 0 0-.708 0L7 1.293 6.354.646a.5.5 0 0 0-.708 0L5 1.293 4.354.646a.5.5 0 0 0-.708 0L3 1.293zm-.217 1.198.51.51a.5.5 0 0 0 .707 0L4 1.707l.646.647a.5.5 0 0 0 .708 0L6 1.707l.646.647a.5.5 0 0 0 .708 0L8 1.707l.646.647a.5.5 0 0 0 .708 0L10 1.707l.646.647a.5.5 0 0 0 .708 0L12 1.707l.646.647a.5.5 0 0 0 .708 0l.509-.51.137.274V15H2V2.118z"/>
+    </symbol>
+    <symbol id="main" viewBox="0 0 16 16">
+<path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>    </symbol>
     <symbol id="mailbox" viewBox="0 0 16 16">
         <path d="M4 4a3 3 0 0 0-3 3v6h6V7a3 3 0 0 0-3-3m0-1h8a4 4 0 0 1 4 4v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7a4 4 0 0 1 4-4m2.646 1A4 4 0 0 1 8 7v6h7V7a3 3 0 0 0-3-3z"/>
         <path d="M11.793 8.5H9v-1h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.354-.146zM5 7c0 .552-.448 0-1 0s-1 .552-1 0a1 1 0 0 1 2 0"/>
@@ -216,30 +223,34 @@
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                {% if user.is_authenticated and user.avatar %}
+                    <img src="{{ user.avatar | media_filter }}" style="width: 32px; height: 32px" class="rounded-circle me-2" >
+                {% else %}
+                    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                {% endif %}
                 <h2><strong>
                     {% if user.is_authenticated %}
-                        {{ user }}
+                    {{ user }}
                     {% else %}
-                        Гость
+                    Гость
                     {% endif %}
                 </strong></h2>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
                 {% if user.is_authenticated %}
-                    <form action="{% url 'users:logout' %}" method="post">
-                        {% csrf_token %}
-                        <li><a class="dropdown-item text-white" href="{% url 'users:profile' %}">Профиль</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                <form action="{% url 'users:logout' %}" method="post">
+                    {% csrf_token %}
+                    <li><a class="dropdown-item text-white" href="{% url 'users:profile' %}">Профиль</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
 
-                        <button style='color:#ffffff' type="submit" class="btn btn-link">Выход</button>
+                    <button style='color:#ffffff' type="submit" class="btn btn-link">Выход</button>
                 </form>
-                    {% else %}
-                    <li><a class="dropdown-item text-white" href="{% url 'users:login' %}">Вход</a></li>
-                    <li><a class="dropdown-item text-white" href="{% url 'users:register' %}">Регистрация</a></li>
-                    {% endif %}
+                {% else %}
+                <li><a class="dropdown-item text-white" href="{% url 'users:login' %}">Вход</a></li>
+                <li><a class="dropdown-item text-white" href="{% url 'users:register' %}">Регистрация</a></li>
+                {% endif %}
 
 
             </ul>
@@ -248,6 +259,14 @@
         <h5>
 
             <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a href="{% url 'mailings:home_page' %}" class="nav-link text-white" aria-current="page">
+                        <svg class="bi pe-none me-2" width="16" height="16">
+                            <use xlink:href="#main"/>
+                        </svg>
+                        Главная
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a href="{% url 'mailings:mailings_list' %}" class="nav-link text-white" aria-current="page">
                         <svg class="bi pe-none me-2" width="16" height="16">
@@ -277,7 +296,7 @@
                 <li>
                     <a href="{% url 'users:user_list' %}" class="nav-link text-white">
                         <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#person-vcard-fill"/>
+                            <use xlink:href="#people-circle"/>
                         </svg>
                         Список Пользователей
                     </a>
@@ -292,11 +311,11 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="{% url 'mailings:attempt_list' %}" class="nav-link text-white">
                         <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#people-circle"/>
+                            <use xlink:href="#attempt"/>
                         </svg>
-                        Контакты
+                        Статистика рассылок
                     </a>
                 </li>
             </ul
